added session storage

--- a/todo/src/app/footer/footer.component.html
+++ b/todo/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<BR> <BR>FOOTER
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Rights Reserved 2000 @todos </span>
+    </div>
+</footer>
