--- a/todo/src/app/welcome/welcome.component.html
+++ b/todo/src/app/welcome/welcome.component.html
@@ -1,3 +1,4 @@
-Welcome to our app, {{name}}
-
-You can manage todos <a routerLink="/todos">here.</a>
+<h1>Welcome!</h1>
+<div class="container">
+    Welcome to our app, {{name}}. You can manage todos <a routerLink="/todos">here.</a>
+</div>
