--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -1,17 +1,21 @@
-<table border="1">
-    <caption>My Todos</caption>
-    <thead>
-        <tr>
-            <th>Description</th>
-            <th>Is Completed</th>
-            <th>Target Date</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let todo of todos">
-            <td>{{todo.description}}</td>
-            <td>{{todo.done}}</td>
-            <td>{{todo.targetDate | date | uppercase}}</td>
-        </tr>
-    </tbody>
-</table>
+<h1>My Todo's</h1>
+
+<div class="container">
+    <table class="table">
+        <caption>My Todos</caption>
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Is Completed</th>
+                <th>Target Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let todo of todos">
+                <td>{{todo.description}}</td>
+                <td>{{todo.done}}</td>
+                <td>{{todo.targetDate | date | uppercase}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
