--- a/todo/src/app/login/login.component.html
+++ b/todo/src/app/login/login.component.html
@@ -1,8 +1,12 @@
-<small *ngIf='invalidLogin'>{{errorMessage}}</small>
+<h1>Login!</h1>
 
-<div>
-    Name : <input type="text"  name="username" [(ngModel)]="username">
-    Password : <input type="password" name="pasword" [(ngModel)]="password">
-    <button (click)=handleLogin()>Login</button>
+<div class="container">
+    <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
+
+    <div>
+        Name : <input type="text"  name="username" [(ngModel)]="username">
+        Password : <input type="password" name="pasword" [(ngModel)]="password">
+        <button class="but btn-success" (click)=handleLogin()>Login</button>
+    </div>
+
 </div>
-
