--- a/todo/src/app/menu/menu.component.html
+++ b/todo/src/app/menu/menu.component.html
@@ -1,1 +1,17 @@
-TOP MENT ELEMENTS
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div>
+            <a href="www.google.com" class="navbar-brand">Google</a>
+        </div>
+        <ul class="navbar-nav">
+            <li><a *ngIf="hardcodedAuthService.isUserLoggedIn()" routerLink="/welcome/mahedi" class="navbar-link">Home</a></li>
+            <li><a *ngIf="hardcodedAuthService.isUserLoggedIn()" routerLink="/todos" class="navbar-link">Todos</a></li>
+
+        </ul>
+        <ul class="navbar-nav navbar-collapse justify-content-end">
+            <li><a *ngIf="!hardcodedAuthService.isUserLoggedIn()" routerLink="/login" class="navbar-link">Login</a></li>
+            <li><a *ngIf="hardcodedAuthService.isUserLoggedIn()" routerLink="/logout" class="navbar-link">Logout</a></li>
+
+        </ul>
+    </nav>
+</header> 
