--- a/todo/src/app/welcome/welcome.component.html
+++ b/todo/src/app/welcome/welcome.component.html
@@ -2,3 +2,12 @@
 <div class="container">
     Welcome to our app, {{name}}. You can manage todos <a routerLink="/todos">here.</a>
 </div>
+<div class="container">
+    Click here to get customized welcome message 
+    <button (click)="getWelcomeMessage()" class=".btn btn-success">Get Welcome Message</button>
+</div>
+
+<div class="container" *ngIf="welcomeMessageFromService">
+    <h2>Your Customize Welcome Message</h2>
+    {{welcomeMessageFromService}}
+</div>
