--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -1,13 +1,16 @@
 <h1>My Todo's</h1>
 
+<div class="alert alert-success" *ngIf='message'>{{message}}</div>
+
 <div class="container">
     <table class="table">
-        <caption>My Todos</caption>
         <thead>
             <tr>
                 <th>Description</th>
                 <th>Is Completed</th>
                 <th>Target Date</th>
+                <th>Update</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -15,7 +18,13 @@
                 <td>{{todo.description}}</td>
                 <td>{{todo.done}}</td>
                 <td>{{todo.targetDate | date | uppercase}}</td>
+                <td><button (click)="updateTodo(todo.id)" class="btn btn-success">Update</button></td>
+                <td><button (click)="deleteTodo(todo.id)" class="btn btn-warning">Delete</button></td>
             </tr>
         </tbody>
     </table>
+
+    <div class="row">
+        <button (click)="addTodo()" class="btn btn-success">Add</button>
+    </div>
 </div>
