added basic auth angular

--- a/todo/src/app/login/login.component.html
+++ b/todo/src/app/login/login.component.html
@@ -6,7 +6,7 @@
     <div>
         Name : <input type="text"  name="username" [(ngModel)]="username">
         Password : <input type="password" name="pasword" [(ngModel)]="password">
-        <button class="but btn-success" (click)=handleLogin()>Login</button>
+        <button class="but btn-success" (click)=handleBasicAuthLogin()>Login</button>
     </div>
 
 </div>
